Fix header width issue on small screens

--- a/mediagoblin/static/css/base.css
+++ b/mediagoblin/static/css/base.css
@@ -663,6 +663,7 @@ pre {
   
   header {
     text-align: center;
+    width: 100%;
   }
   
   .header_right {
